A preload disabled video object should play when src is set.

On a video tag, when preload is set to none, if  play() has been
called and a src has not been set, the video tag should play
content when the src is set later asynchronously.

BUG=633591

Change-Id: I05c531a3f28151e21a033577c0273aaaa3c595f2