third_party/WebKit/Source/core/html/media/HTMLMediaElement.cpp
@@ -618,6 +618,13 @@ void HTMLMediaElement::ParseAttribute(
     if (!params.new_value.IsNull()) {
       ignore_preload_none_ = false;
       InvokeLoadAlgorithm();
+      if (pending_play_) {
+        if (!paused_ && !playing_) {
+          PlayInternal();
+        } else {
+          pending_play_ = false;
+        }
+      }
     }
   } else if (name == controlsAttr) {
     UseCounter::Count(GetDocument(),
@@ -2355,6 +2362,9 @@ Nullable<ExceptionCode> HTMLMediaElement::Play() {
 
   Nullable<ExceptionCode> exception_code = autoplay_policy_->RequestPlay();
 
+  if (EffectivePreloadType() == WebMediaPlayer::kPreloadNone && !src_object_)
+    pending_play_ = true;
+
   if (exception_code == kNotAllowedError) {
     // If we're already playing, then this play would do nothing anyway.
     // Call playInternal to handle scheduling the promise resolution.
@@ -3415,6 +3425,9 @@ void HTMLMediaElement::UpdatePlayState() {
 
     StartPlaybackProgressTimer();
     playing_ = true;
+    if (pending_play_)
+      pending_play_ = false;
+
   } else {  // Should not be playing right now
     if (is_playing) {
       GetWebMediaPlayer()->Pause();
